<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardUseCompatPadding="true"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_dark"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/recipe_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:theme="@style/Text"
            android:hint="@string/ask_delete"

            />

        <Button
            android:id="@+id/recipe_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipe_confirm"
            android:layout_alignParentStart="true"
            android:theme="@style/Button"
            android:text="@string/Confirm"
            android:background="@android:color/transparent"
            />

        <Button
            android:id="@+id/recipe_cancel"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginEnd="10sp"
            android:layout_below="@+id/recipe_confirm"
            android:layout_alignParentEnd="true"
            android:theme="@style/Button"
            android:text="@string/Cancel"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>