<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15sp"
        android:background="@color/background_dark"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Background"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"

            android:padding="10dp">

            <TextView
                android:id="@+id/titleTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Text"
                android:padding="10dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/DeleteConfirmation" />

            <Button
                android:id="@+id/deleteYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Button"
                android:text="@string/Yes"
                android:layout_below="@+id/titleTask"
                android:layout_alignParentEnd="true"/>

            <Button
                android:id="@+id/deleteNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Button"
                android:text="@string/No"
                android:layout_below="@+id/titleTask"
                 />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>