<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15sp"
        android:background="@color/background_dark"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Background"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"

            android:padding="10dp">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:theme="@style/Text"
                android:text="@string/CreateTask"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_alignParentTop="true"
                />

            <NumberPicker
                android:id="@+id/edit_number"
                android:theme="@style/Spinner"
                android:layout_width="125dp"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView"
                />


            <EditText
                android:id="@+id/edit_comment"
                android:layout_width="151dp"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:theme="@style/Text"
                android:hint="@string/DefName"
                android:inputType="textMultiLine|text"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Button"
                android:text="@string/submit"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@+id/edit_comment"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Button"
                android:text="@string/cancel"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/edit_number"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>