<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    android:backgroundTint="@android:color/transparent">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardUseCompatPadding="true"
        android:clickable="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_dark"
            android:padding="10dp">

            <TextView
                android:id="@+id/FilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:theme="@style/Text"
                android:text="@string/Filter"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/FilterText"
                android:layout_marginTop="5sp"
                android:gravity="center_vertical"
                android:id="@+id/first_row"
                android:layout_marginVertical="10sp"
                >

                <TextView
                    android:id="@+id/TasteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:theme="@style/Text"
                    android:text="@string/Taste"
                    />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_taste"
                    android:theme="@style/Dropdown"
                    android:layout_marginEnd="20sp"
                    android:dropDownWidth="70sp"
                    android:layout_alignParentEnd="true"
                    android:entries="@array/tastes_create"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_row"
                android:layout_marginTop="5sp"
                android:gravity="center_vertical"
                android:id="@+id/second_row"
                android:layout_marginBottom="10sp"
                >
                <TextView
                    android:id="@+id/TypeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:theme="@style/Text"
                    android:text="@string/Type"
                    />

                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:dropDownWidth="70sp"
                    android:theme="@style/Dropdown"
                    android:layout_alignParentEnd="true"
                    android:entries="@array/types_create"
                    />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>